scss/_responsive.scss
@media screen and (min-width: 768px) {
  // Desktop
  /* Start of Navbar Desktop */

  .menu-btn {
    visibility: hidden;
  }

  .second-header {
    position: fixed;
    z-index: 2;
    width: 100%;
    padding: 1rem;
    background: black;
    @include transition-ease;
  }

  .nav {
    visibility: visible;

    .menu-nav {
      display: block;
      transform: translateY(0);
      height: 100%;
      text-align: right;

      &__item,
      &__cart-item {
        display: inline;
      }

      &__link,
      &__cart-link {
        font-size: 1.5rem;
      }
    }

    .logo {
      font-family: "Marck Script", cursive;
      float: left;
      font-size: 1.5rem;
      color: $white-color;
    }

    .sign-in,
    .sign-up {
      font-size: 1rem;
    }

    .sign-in {
      margin-right: 0rem;
    }

    .sign-in.active,
    .sign-up.active {
      color: $primary-color;
    }

    #slash {
      color: white;
      font-size: 1rem;
      margin: 0 0.5rem;
    }

    ul li {
      display: inline;
      font-family: "Baloo 2", cursive;
    }

    a {
      outline: none;
      color: white;
      font-size: 1.5rem;
      margin-right: 2rem;
      text-decoration: none;
      @include transition-ease;

      &:hover {
        color: $primary-color;
      }
    }
  }
  /* End of Navbar Desktop */

  /* Shopping Cart and View Button*/
  .cart,
  .one__view,
  .two__view,
  .three__view,
  .four__view,
  .five__view,
  .six__view,
  .seven__view,
  .eight__view,
  .nine__view,
  .ten__view,
  .eleven__view,
  .twelve__view {
    width: 30vw;
    min-width: 450px;
  }
}

@include media-md {
  /* Start of Navbar Mobile */

  .menu-btn {
    text-align: left;
    position: fixed;
    z-index: 3;
    right: 1rem;
    top: 1rem;
    height: 20px;
    width: 28px;
    cursor: pointer;
    @include transition-ease;

    &__burger {
      position: absolute;
      right: 0;
      top: 0.5rem;
      width: 28px;
      height: 3px;
      background: $white-color;
      @include transition-ease;

      &::before {
        content: "";
        position: absolute;
        top: -8px;
        width: 28px;
        height: 3px;
        background: $white-color;
        @include transition-ease;
      }

      &::after {
        content: "";
        position: absolute;
        top: 8px;
        width: 28px;
        height: 3px;
        background: $white-color;
        @include transition-ease;
      }

      &.open {
        transform: rotate(720deg);
        background: transparent;

        &::before {
          transform: rotate(45deg) translate(5px, 8px);
        }

        &::after {
          width: 28px;
          transform: rotate(-45deg) translate(3px, -7px);
        }
      }
    }
  }

  .cart-mobile {
    // text-align: left;
    position: absolute;
    z-index: 3;
    left: 1rem;
    top: 1rem;
    // height: 20px;
    // width: 28px;
    // transform: translateY(5000%);
    // transform: translateY(100%);
    cursor: pointer;
    @include transition-ease;

    // position: absolute;
    // right: 0;
    // top: 0.5rem;
    // width: 28px;
    // height: 3px;
    // background: $white-color;
    // transform: translate(-200%, 200%);
  }

  .nav {
    z-index: 2;
    position: fixed;
    top: 0;
    left: 0;
    width: 100vw;
    opacity: 0.98;
    visibility: hidden;

    br {
      display: none;
    }

    ul li {
      display: inline;
      font-family: "Baloo 2", cursive;
    }

    a {
      outline: none;
      color: white;
      font-size: 1.5rem;
      margin-right: 2rem;
      text-decoration: none;
      @include transition-ease;

      &:hover {
        color: $primary-color;
      }
    }

    &.open {
      visibility: visible;
    }

    .menu-nav {
      display: flex;
      flex-flow: column wrap;
      align-items: center;
      justify-content: center;
      height: 100vh;
      overflow: hidden;
      background: black;
      list-style-type: none;
      padding-right: 1rem;
      transform: translateY(-100%);
      @include transition-ease;

      &.open {
        transform: translateY(0);
      }

      &__item {
        transform: translateX(100vw);
        @include transition-ease;

        &.open {
          transform: translateX(0);
        }

        &.active > a {
          color: $primary-color;
        }
      }

      &__link {
        display: inline-block;
        font-size: 2rem;
        text-transform: uppercase;
        padding: 1rem 0;
        font-weight: 300;
        @include transition-ease;

        &:hover {
          color: $primary-color;
        }
      }
    }

    .logo {
      font-family: "Marck Script", cursive;
      // float: left;
      font-size: 2rem;
      color: $white-color;
      text-transform: none;
    }

    .sign-in,
    .sign-up {
      font-size: 1.5rem;
      margin-right: 0rem;
    }

    .sign-in.active,
    .sign-up.active {
      color: $primary-color;
    }

    #slash {
      color: white;
      margin: 0 0.5rem;
    }
  }

  @for $i from 1 through 7 {
    .menu-nav__item:nth-child(#{$i}) {
      transition-delay: ($i * 0.1s) + 0.15s;
    }
  }

  /* End of Navbar Mobile */

  /* Shopping Cart and View Button*/
  .cart,
  .one__view,
  .two__view,
  .three__view,
  .four__view,
  .five__view,
  .six__view,
  .seven__view,
  .eight__view,
  .nine__view,
  .ten__view,
  .eleven__view,
  .twelve__view {
    width: 100%;
  }

  .contact {
    .pic-area {
      padding-top: 20vh;
      .sections {
        grid-template-columns: 1fr;
        &-section {
          font-size: 1rem;
          padding: 0;
          margin: 0;
        }
      }

      .icons {
        font-size: 1.5rem;
        display: inline;
        padding: 0;
        margin: 0;

        a {
          color: black;
          outline: none;
          text-decoration: none;
          margin: 0.5rem;
          @include transition-ease;

          &:hover {
            color: $primary-color;
          }
        }
      }

      .copyright {
        font-size: 0.75rem;
      }
    }
  }

  .sign-up,
  .sign-in {
    .pic-area {
      height: 100vh;
      padding-top: 35vh;
      overflow: hidden;

      label {
        font-size: 1.5rem;
      }

      .pic-area-text {
        padding: 0.25rem;
        background: rgba(71, 71, 71, 0.2);
      }

      input {
        font-size: 1rem;
        border: 1px solid $primary-color;
      }

      #username-display {
        font-size: 1rem;
        margin: 0.5rem;
      }

      .btn-order {
        padding: 0.25rem 1rem;
        font-size: 1rem;
        letter-spacing: 0.5px;
      }

      .icons {
        font-size: 1.5rem;
        margin-top: 1rem;

        a {
          margin: 0.25rem;
        }
      }
    }
  }
}

@include media-lg {
  .home {
    .main-area {
      h1 {
        font-size: 1rem;
        margin: 20px;
      }

      p {
        font-size: 0.7rem;
        margin: 10px 20%;
      }
      .section-area {
        .box {
          &-text {
            position: static;
            margin: 0;
          }
        }
      }
    }
  }
  .services {
    .main-area {
      h1 {
        font-size: 1rem;
        margin: 20px;
      }

      p {
        font-size: 0.7rem;
        margin: 10px 20%;
      }
      .section-area {
        .box {
          &-text {
            position: static;
            margin: 0;
          }
        }
      }
    }
  }
}

// @include media-xl {
//   .pic-area {
//     height: 100vh;
//   }
// }

